<resources>
    <string name="app_name">QuotesApplication</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="bruce_wayne">Bruce Wayne</string>
    <string name="demoTXT">Genius is one percent inspiration and ninety-nine percent perspiration.</string>
    <string name="todo">TODO</string>
    <string name="quotes">Quotes</string>
</resources>